fixing click event on mobile

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h2 {
     padding: 8px 20px;
     border-radius: 25px;
     color: white;
+    cursor: pointer;
 }
 
 #copy {
